--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches:
       - '*'
+  workflow_dispatch:
+  
 env:
   CACHE_VERSION: 20230704
   PAWPAW_VERSION: 6a3c6a65a89abe221858c3f7635140074506bfc3
